A number of improvements to the namings of the chunking and retrieval methods, results display and UX improvements

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "@google/genai": "^1.40.0",
-    "@xenova/transformers": "2.16.0"
+    "@xenova/transformers": "2.16.0",
+    "papaparse": "^5.5.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
